feat: Create favorite page
